[gd_scene load_steps=7 format=2]

[ext_resource path="res://MainScreen.gd" type="Script" id=1]
[ext_resource path="res://Pong/pong.tscn" type="PackedScene" id=2]
[ext_resource path="res://DefaultArcade.tscn" type="PackedScene" id=3]
[ext_resource path="res://Asteroids.tscn" type="PackedScene" id=4]
[ext_resource path="res://HighScore.tscn" type="PackedScene" id=5]
[ext_resource path="res://World.tscn" type="PackedScene" id=6]

[node name="MainScreen" type="Node"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 512.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="GameViewport" type="Viewport" parent="VBoxContainer/HBoxContainer/ViewportContainer"]
size = Vector2( 512, 298 )
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="VBoxContainer/HBoxContainer/ViewportContainer/GameViewport"]
anchor_mode = 0
current = true

[node name="PongGame" parent="VBoxContainer/HBoxContainer/ViewportContainer/GameViewport" instance=ExtResource( 2 )]

[node name="DefaultArcade" parent="VBoxContainer/HBoxContainer/ViewportContainer/GameViewport" instance=ExtResource( 3 )]

[node name="Asteroids" parent="VBoxContainer/HBoxContainer/ViewportContainer/GameViewport" instance=ExtResource( 4 )]

[node name="ViewportContainer2" type="ViewportContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 512.0
margin_right = 1024.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="ScoreViewport" type="Viewport" parent="VBoxContainer/HBoxContainer/ViewportContainer2"]
size = Vector2( 512, 298 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="VBoxContainer/HBoxContainer/ViewportContainer2/ScoreViewport"]
anchor_mode = 0
current = true

[node name="HighScore" parent="VBoxContainer/HBoxContainer/ViewportContainer2/ScoreViewport" instance=ExtResource( 5 )]

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer"]
margin_top = 302.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="WorldViewport" type="Viewport" parent="VBoxContainer/ViewportContainer"]
size = Vector2( 1024, 298 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="VBoxContainer/ViewportContainer/WorldViewport"]
anchor_mode = 0
current = true

[node name="World" parent="VBoxContainer/ViewportContainer/WorldViewport" instance=ExtResource( 6 )]
